* Version 1.6 unreleased

* Version 1.5 released 2010-09-14

  * Brown paper bag release to update NEWS and Makefile before release.

* Version 1.4 released 2010-09-14

  * Don't use PDO rowCount, it is not portable.
    Issue #2 reported by arte42.ripe, see:
    http://code.google.com/p/yubikey-ksm/issues/detail?id=2>.

  * Fixed perl warning in ykksm-gen-keys.
    Issue #3 reported by toddejohnson, see:
    http://code.google.com/p/yubikey-ksm/issues/detail?id=3>.

  * Improve documentation.

* Version 1.3 released 2010-03-16

  * Added ykksm-checksum tool.

* Version 1.2 released 2009-12-15

  * Documentation and installation experience substantially improved.

* Version 1.1 released 2009-12-02

  * Use PHP PDO instead of hard coding use of MySQL database interface.

* Version 1.0 released 2009-11-19

  * Initial release.